# NexusNitroLLM-nnLLM-

./: .gitattributes  .gitignore  .gitignore.md  Cargo.toml  NODEJS_ISSUES.md  NODE_STATUS_SUMMARY.md  README.md  env.example  index.d.ts  napi.toml  nexus_nitro_llm.darwin-arm64.node  nexus_nitro_llm.linux-x64-gnu.node  package.json  pyproject.toml  run_server_fast.sh  run_server_persistent.sh
.github/: copilot-instructions.md
benches/: README.md  benchmark_controller.js  chart_generator.js  node_benchmark.js  package.json  python_benchmark.py  report_generator.js  requirements.txt  rust_benchmark.rs  rust_streaming_benchmark.rs
docs/: DOCUMENTATION.md  LIBRARY_USAGE.md  NODEJS_BINDINGS.md  PERFORMANCE_BENCHMARKING.md  PYTHON_BINDINGS.md  README.md  SCRIPTS.md  SECURITY.md  TESTING_SUMMARY.md
examples/: basic_server.rs  custom_client.rs  date_time_emergency_functions.rs.disabled  function_calling_demo.rs.disabled  graceful_shutdown_demo.rs  security_demo.rs  with_metrics.rs
nodejs/: README.md  index.js  jest.config.js  nexus_nitro_llm.darwin-universal.node
nodejs/benchmarks/: performance.js
nodejs/examples/: basic_usage.js  direct-mode-usage.js  direct-mode-usage.ts
nodejs/src/: performance_client.js
nodejs/tests/: basic.test.js  direct-mode.test.js  mockoon.test.js  performance.test.js  setup.js  stress.test.js
python/: __init__.py  nexus_nitro_llm.pyi  test_streaming.py
python/examples/: advanced_usage.py  async_usage.py  basic_usage.py  direct_mode_usage.py  mode_comparison.py
python/src/: performance_client.py
python/tests/: test_async_functionality.py  test_basic_functionality.py  test_error_handling.py  test_mockoon.py  test_performance_regression.py  test_stress_and_longevity.py
scripts/: benchmark.sh  demo_streaming.sh  run.sh  setup_env.sh
src/: anthropic.rs  batching.rs  caching.rs  client.rs  config.rs  config.rs.bak2  config.rs.bak4  config.rs.bak5  config.rs.bak6  config.rs.bak7  config.rs.bak8  distributed_rate_limiting.rs  error.rs  graceful_shutdown.rs  lib.rs  main.rs  main_enhanced.rs  metrics.rs  monitoring.rs  nodejs.rs  performance_optimization.rs  python.rs  rate_limiting.rs  routes.rs  routes_enhanced.rs  routing.rs  schemas.rs  streaming_enhanced.rs
src/adapters/: base.rs  custom.rs  direct.rs  mod.rs  vllm.rs
src/adapters/aws/: mod.rs
src/adapters/azure/: mod.rs
src/adapters/lightllm/: mod.rs
src/adapters/openai/: mod.rs
src/core/: http_client.rs  mod.rs
src/server/: handlers.rs  mod.rs  routes.rs  state.rs
src/streaming/: adapters.rs  core.rs  mod.rs
src/tools/: executor.rs  message_builder.rs  mod.rs  registry.rs  streaming.rs  validation.rs
tests/: COMPREHENSIVE_TEST_SUMMARY.md  advanced_streaming_test.rs  auth_headers_tests.rs  batching_concurrency_tests.rs  chat_message_rules_tests.rs  cli_feature_tests.rs  comprehensive_streaming_tests.rs  comprehensive_test_runner.rs  config_validation_edge_cases.rs  context_window_tests.rs  feature_combination_tests.rs  ffi_safety_tests.rs  integration_streaming_test.rs  integration_test.rs  integration_tests.rs  language_binding_tests.rs  loopback_mockoon_tests.rs  mockoon-env.json  observability_metrics_tests.rs  performance_test.rs  performance_validation.rs  real_endpoint_test.rs  request_schema_tests.rs  retries_idempotency_tests.rs  run_performance_tests.sh  run_proxy_tests.sh  run_smoke_tests.sh  rust_native_mockoon_tests.rs  security_privacy_tests.rs  server_feature_tests.rs  smoke_test.rs  smoke_test_node.js  smoke_test_python.py  smoke_tests.rs  smoke_tests_node.js  smoke_tests_python.py  streaming_feature_tests.rs  streaming_test.rs  stress_test.rs  structured_outputs_tests.rs  (+1 more)
