[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nexus-nitro-llm"
version = "0.1.0"
description = "NexusNitroLLM (nnLLM) - Universal LLM integration library with high-performance Python bindings"
authors = [{name = "NexusNitroLLM Team"}]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
homepage = "https://github.com/OpenToInnovate/NexusNitroLLM-nnLLM-"
repository = "https://github.com/OpenToInnovate/NexusNitroLLM-nnLLM-"
documentation = "https://docs.rs/nexus_nitro_llm"
keywords = ["llm", "openai", "lightllm", "vllm", "azure", "aws", "async", "performance", "nexus", "nitro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "psutil>=5.9",  # For performance testing
]
examples = [
    "asyncio",
    "aiohttp>=3.8",
    "httpx>=0.24",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "psutil>=5.9",
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/OpenToInnovate/NexusNitroLLM-nnLLM-"
Repository = "https://github.com/OpenToInnovate/NexusNitroLLM-nnLLM-"
Documentation = "https://docs.rs/nexus_nitro_llm"
"Bug Tracker" = "https://github.com/OpenToInnovate/NexusNitroLLM-nnLLM-/issues"

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
module-name = "nexus_nitro_llm"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true